Alteração no footer e estruração do formulário

--- a/crenças.html
+++ b/crenças.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neuroplasticidade: A Capacidade Revolucionária do Cérebro</title>
+    <title>Crenças moldam a realidade</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/w.ico">
 </head>
@@ -20,9 +20,9 @@
 
     <div class="content">
         <nav role="navigation" class="sidebar" aria-label="Menu Principal">
-            <h2>Neuroplasticidade</h2>
+            <h2>Crenças moldam a realidade</h2>
             <ul class="sidebar">
-                <li><a href="neuroplasticidade.html">Neurociência</a></li>
+                <li><a href="neuroplasticidade.html">Neuroplasticidade</a></li>
                 <li><a href="crenças.html">Crenças mudam tudo</a></li>
                 <li><a href="contribuicao.html">Contribua conosco</a></li>
             </ul>
